<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg_ys"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/doctor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <EditText
            android:id="@+id/editText_login_phoneNumber"
            style="@style/login_et_style"
            android:layout_alignParentTop="true"
            android:hint="@string/userAccount" />

        <EditText
            android:id="@+id/editText_login_password"
            style="@style/login_et_style"
            android:layout_alignParentBottom="true"
            android:hint="@string/userPassword"
            android:inputType="textPassword" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login_"
            android:textColor="@color/login_tv_color"
            android:textSize="22sp" />
    </RelativeLayout>

</LinearLayout>